2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Set serializable transaction isolation level for cursors.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Don't set transaction isolation level in _postgresql_initialize_transactions.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	Rename testing sequence in db tests.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Set transaction level explicitly in dbapi.

2009-12-04  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix omission of menu separators in pytis_view_user_menu db function.

2009-12-04  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Add GRANT to db view ev_pytis_colnames.

2009-11-09  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Add codebook to `colname' field in rights editing.
	

2009-11-07  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Fix column rights computation when reading rights from the database.

2009-11-07  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/_grid.py:
	Hide column styles of the columns without VIEW right.

2009-11-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix pytis_compute_summary_rights arguments in pytis_view_user_rights db function.

2009-11-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Make VIEW column rights relevant to determining multiform rights.

2009-11-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fixes after merge of column rights and multiforms rights.

2009-11-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Don't mistakenly classify some access rights as redundant.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Pass allowed column rights even when a corresponding form right is forbidden.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>
