@@ -1,3 +1,8 @@
+2009-12-05  Milan Zamazal  <pdm@brailcom.org>
+
+	* tools/genmenu.py:
+	Fix subactions checking in genmenu.
+
 2009-11-06  Milan Zamazal  <pdm@brailcom.org>
 
 	* lib/pytis/data/postgresql.py:
